Trying to fix alignment of input fields

--- a/ccana_site/registration/static/registration/style.css
+++ b/ccana_site/registration/static/registration/style.css
@@ -29,14 +29,11 @@
   margin-right: 50%;
 }
 
-.fieldWrapper{
-
-
-}
 span{
   text-align: center;
   padding:5px;
 }
+
 p{
   width:100%;
   float:left;
@@ -47,8 +44,8 @@ p{
 
 h2{
   font-size: 3.5vw;
-
 }
+
 .motto{
   height: 30%;
   width: 100%;
@@ -86,4 +83,13 @@ h2{
   border-color: #ee3023;
   box-shadow: 0px 0px 0px 5px #ee3023 inset;
   text-align: center;
+}
+
+.fieldWrapper{
+  margin-right: 70%;
+  padding-bottom: 1%;
+}
+
+input{
+  float:right;
 }
